--- a/letter.html
+++ b/letter.html
@@ -38,7 +38,7 @@
 <p>
     Dear Eileen, <br>
 <br>
-    Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your PhD next year. I will answer your questions one by one, in the following sections.   
+    Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your <abbr title="Doctor of Philosophy">PhD</abbr> next year. I will answer your questions one by one, in the following sections.   
 </p>
 
 <h2>Starting dates</h2>
@@ -79,11 +79,11 @@ At the Awesome Science Faculty, we have a pretty open-minded research facility â
 
 <h2>Exotic dance moves</h2>
 
-Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:
+Yes, you are right! As part of my post-doctorate work, I <em>did</em> study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:
 
 <dl>
     <dt>Polynesian chicken dance</dt>
-    <dd>A little known but very influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
+    <dd>A little known but <em>very</em> influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
     <dt>Icelandic brownian shuffle</dt>
     <dd>Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dd>
     <dt>Arctic robot dance</dt>
