--- a/letter.html
+++ b/letter.html
@@ -57,7 +57,7 @@ We are happy to accommodate you starting your study with us at any time, however
 </p>
 
 <p>
-    You can find more information about <a href="www.google.com">important university dates</a> on our website.
+    You can find more information about <a href="www.google.com" target="_blank">important university dates</a> on our website.
    
 </p>
 
@@ -90,7 +90,7 @@ Yes, you are right! As part of my post-doctorate work, I <em>did</em> study exot
     <dd>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
 </dl>
 
-<p>For more of my research, see my <a href="http://google.com">exotic dance research page</a>.</p>
+<p>For more of my research, see my <a href="http://google.com" target="_blank">exotic dance research page</a>.</p>
 
 <p>
     Yours sincerely,<br>
