fix: modify letter files

--- a/letter.html
+++ b/letter.html
@@ -57,7 +57,7 @@ We are happy to accommodate you starting your study with us at any time, however
 </p>
 
 <p>
-    You can find more information about <a href="http://google.com" target="_blank"></a>important university dates</a> on our website.
+    You can find more information about <important href="http://google.com" target="_blank">important university dates</a> on our website.
    
 </p>
 
