--- a/demosignup.html
+++ b/demosignup.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="./apple-touch-icon.png" alt="lg" height="50" id="logo">
         <h1>Kreation Empire</h1>
     </header>
 
@@ -142,7 +143,7 @@
                 </li>
                 <li>
                     <span>Gender</span>
-                    <select>
+                    <select id="gen">
                         <optgroup label="Gender">
                             <option value="ml">Male</option>
                         <option value="fm">Female</option>
@@ -155,7 +156,7 @@
                 <li>
                   <span>State Of Origin</span>
 
-                <select>
+                <select id="soo">
                     <optgroup label="South West">
                         <option value="OS">Osun</option>
                         <option value="lg">Lagos</option>
