--- a/demosignin.html
+++ b/demosignin.html
@@ -120,13 +120,13 @@
              <br>
             <label for="pass">Password</label>
             <input type="password" name="password" id="pass">
-            <input type="submit" value="submit">
+            <input type="submit" value="submit" id="sub">
 
         </form>
         <hr>
 
-        <p>forget password?</p><br>
-        <p>reset password?</p>
+        <p id="fpass">forget password?</p>
+        <p id="rpass">reset password?</p>
        
        </main>
 
